@@ -12,6 +12,4 @@
 	</tr>
 </table>
 
-<jwc id="captive"/>
-
 </jwc>
