@@ -1,3 +1,10 @@
+* Oct 18 2000 hship
+
+Add resetServiceEnabled property to AbstractApplication.  Add the IDirect interface.
+Implemented caching of FieldBindings.
+Make sure the page is identified in a RequestCycleException, if a runtime exception
+is thrown during rewindPage().
+
 * Oct 16 2000 hship
 
 Implemented the <field-binding> element of the specification.  Allows a binding to
